increase z-index of sidebar and fix AnalyzeQuiz ui

--- a/src/Dashboard/Analyze/SelectQuiz/SelectQuiz.module.css
+++ b/src/Dashboard/Analyze/SelectQuiz/SelectQuiz.module.css
@@ -18,7 +18,7 @@
 }
 
 .dropdown {
-  @apply z-10 w-2/3;
+  @apply w-2/3;
   @apply bg-white rounded divide-y;
   @apply divide-gray-100 shadow dark:bg-gray-600;
 
